--- a/website/index.html
+++ b/website/index.html
@@ -262,6 +262,6 @@
       </li>
     </ul>
 
-    <script type="module" src="/assets/index.ts"></script>
+    <script ></script>
   </body>
 </html>
