--- a/website/index.html
+++ b/website/index.html
@@ -20,10 +20,31 @@
     <button id="playButton">Play/Pause</button>
     <button id="muteButton">Mute/Unmute</button>
   </main>
+  <script>
+    const video = document.querySelector("video")
+
+    function MediaPlayer(config) {
+      this.media = config.el
+    }
+
+    MediaPlayer.prototype.play = function () {
+      if (this.media.paused) {
+        this.media.play()
+      } else {
+        this.media.pause()
+      }
 
 
+    }
 
-  <script></script>
+
+    const player = new MediaPlayer({ el: video })
+
+    const button = document.querySelector("button")
+
+    button.onclick = () => player.play()
+
+  </script>
 </body>
 
 </html>
